# django-smart-fixtures

./: .gitignore  MANIFEST.in  README.md  manage.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml  releases.yml
core/: asgi.py  settings.py  urls.py  wsgi.py
django_smart_fixtures/: apps.py  asgi.py  settings.py  tests.py  urls.py  wsgi.py
django_smart_fixtures/management/commands/: load_fixtures.py
dummy/: admin.py  models.py
dummy/fixtures/: first_dummies.yaml  second_dummies.yaml
dummy/migrations/: 0001_initial.py
smart_fixtures/: apps.py  tests.py  utils.py
smart_fixtures/management/commands/: loaddata.py
smart_fixtures/tests/: test_create_copied_files_message.py  test_loaddata_command.py
