[tool.poetry]
name = "django-smart-fixtures"
version = "0.0.0"
description = "Don't be stupid, and load fixtures in a smart way"
authors = ["Miloš Roknić <roknic.milos.994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"
pillow = "^10.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"
pytest-cov = "^5.0.0"
pyyaml = "^6.0.2"
flake8 = "^7.1.1"
flake8-quotes = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
